# First-Semester-Algorithms

./: CMakeLists.txt  README.md  dawid-dziala.cpp  kolos1.cpp  kp1.cpp  kp2.cpp  kp2_.cpp  kp3.cpp  kp4.cpp  kp_3.cpp  kp_4.cpp  zadanie-1-1.cpp  zadanie-1-2.cpp  zadanie-1-3.cpp  zadanie-1-4.cpp  zadanie-1-5.cpp  zadanie-1-6.cpp  zadanie-2-1.cpp  zadanie-2-10.cpp  zadanie-2-2.cpp  zadanie-2-3.cpp  zadanie-2-4.cpp  zadanie-2-5.cpp  zadanie-2-6.cpp  zadanie-2-7.cpp  zadanie-2-8.cpp  zadanie-2-9.cpp  zadanie-3-1.cpp  zadanie-3-2.cpp  zadanie-3-3.cpp  zadanie-3-6.cpp  zadanie-4-1.2.cpp  zadanie-4-1.cpp  zadanie-5-1.cpp  zadanie-5-2.cpp  zadanie-5-3.cpp  zadanie-5-4.cpp  zadanie-5-5-1.cpp  zadanie-5-5.cpp  zadanie-6-1.cpp  (+14 more)
