cmake_minimum_required(VERSION 3.15)
project(wdi_bk)

set(CMAKE_CXX_STANDARD 17)

add_executable(zadanie-1-1 zadanie-1-1.cpp)
add_executable(zadanie-1-2 zadanie-1-2.cpp)
add_executable(zadanie-1-3 zadanie-1-3.cpp)
add_executable(zadanie-1-4 zadanie-1-4.cpp)
add_executable(zadanie-1-5 zadanie-1-5.cpp)
add_executable(zadanie-1-6 zadanie-1-6.cpp)
add_executable(zadanie-2-1 zadanie-2-1.cpp)
add_executable(zadanie-2-2 zadanie-2-2.cpp)
add_executable(zadanie-2-3 zadanie-2-3.cpp)
add_executable(zadanie-2-4 zadanie-2-4.cpp)
add_executable(zadanie-2-5 zadanie-2-5.cpp)
add_executable(zadanie-2-6 zadanie-2-6.cpp)
add_executable(zadanie-2-7 zadanie-2-7.cpp)
add_executable(zadanie-2-8 zadanie-2-8.cpp)
add_executable(zadanie-2-9 zadanie-2-9.cpp)
add_executable(zadanie-2-10 zadanie-2-10.cpp)
add_executable(zadanie-3-1 zadanie-3-1.cpp)
add_executable(zadanie-3-2 zadanie-3-2.cpp)
add_executable(zadanie-3-6 zadanie-3-6.cpp)
add_executable(zadanie-4-1 zadanie-4-1.cpp)
add_executable(zadanie-4-1.2 zadanie-4-1.2.cpp)
add_executable(zadanie-5-1 zadanie-5-1.cpp)
add_executable(zadanie-5-2 zadanie-5-2.cpp)
add_executable(zadanie-5-3 zadanie-5-3.cpp)
add_executable(zadanie-5-4 zadanie-5-4.cpp)
add_executable(zadanie-5-5-1 zadanie-5-5-1.cpp)
add_executable(dawid-dziala dawid-dziala.cpp)
add_executable(zadanie-6-1 zadanie-6-1.cpp)
add_executable(zadanie-6-2 zadanie-6-2.cpp)
add_executable(zadanie-6-3 zadanie-6-3.cpp)
add_executable(zadanie-6-4 zadanie-6-4.cpp)
add_executable(zadanie-7-1 zadanie-7-1.cpp)
add_executable(zadanie-7-2 zadanie-7-2)
add_executable(zadanie-7-3 zadanie-7-3)
add_executable(zadanie-9-1.cpp zadanie-9-1.cpp)
add_executable(zadanie-9-2.cpp zadanie-9-2.cpp)
add_executable(zadanie-9-3.cpp zadanie-9-3.cpp)
add_executable(zadanie-9-1.1.cpp zadanie-9-1.1.cpp)
add_executable(zadanie-9-1.2.cpp zadanie-9-1.2.cpp)
add_executable(zadanie-9-1.3.cpp zadanie-9-1.3.cpp)
add_executable(zadanie-9-4.cpp zadanie-9-4.cpp)
add_executable(zadanie-9-5.cpp zadanie-9-5.cpp)
add_executable(kolos1.cpp kolos1)
add_executable(kp1.cpp kp1.cpp)
add_executable(kp2.cpp kp2.cpp)
add_executable(kp3.cpp kp3.cpp)
add_executable(kp4.cpp kp4.cpp)
add_executable(kp_3.cpp kp_3.cpp)
add_executable(kp_4.cpp kp_4.cpp)